<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <com.example.parcial_1_am_acn4av_barreto_szucs.LogoComponent
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:value="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/img_messi"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_photo"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/text_background"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_change_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"
        android:padding="12dp"
        android:background="@drawable/text_background"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/text_background"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edit_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/edit_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>