<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ac_font"
        android:letterSpacing="0.1"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_app">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/messi" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/reject_button"
        android:text="@string/reject_button"
        android:textColor="@color/coral_tags"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="666dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aproval_button"
        android:background="@drawable/aproval_button"
        android:textSize="15sp"
        android:textColor="@color/coral_tags"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="666dp" />

</androidx.constraintlayout.widget.ConstraintLayout>